--- a/css/style.css
+++ b/css/style.css
@@ -299,9 +299,10 @@ h2 {
   }
 
   .card-button {
-    padding: 10px 17px;
-    margin: 10px;
-    font-size: 1.5rem;
+    /* padding: 10px 17px; */
+    padding: 1.1rem 1.3rem;
+    margin: 0.1rem 0.4rem;
+    font-size: 1.2rem;
   }
 
   .item {
